src/objects/Demoobject1__c.object
<CustomObject>
    <description>this is demo object for assignment 1 of tools</description>
    <fields>
        <fullName>Marks_of_chem__c</fullName>
        <description>this is marks field</description>
        <label>Marks of chem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>this is name field for this object</description>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marks_of_physics__c</fullName>
        <description>here enter marks of physics</description>
        <label>marks of physics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Demoobject1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Demoobject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demoobject1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>